<resources>
    <string name="app_name">MobiCharge</string>
    <string name="loginText">Veuillez entrer votre login et mot de passe</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="numtel">Numero de telephone</string>
    <string name="coderecharge">Saisir votre code de recharge (14 chiffres)</string>
    <string name="coderechargeET">Code de recharge</string>
    <string name="rechargement">Recharger votre ligne</string>
    <string name="rechargementET">Recharger ligne</string>
    <string name="saisirsolde">Consulter le solde de votre ligne</string>
    <string name="numtelPlaceholder">Saisir votre numero de telephone</string>
    <string name="appeler">Appeler</string>

</resources>