<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50sp"
    android:id="@+id/mainParent"
    tools:context=".MainActivity">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingVertical="10dp"
        android:text="@string/loginText"/>

    <EditText
        android:id="@+id/loginET"
        android:inputType="text"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/passwdET"
         android:inputType="textPassword"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginET"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/passwdET"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="@string/connexion"/>




</androidx.constraintlayout.widget.ConstraintLayout>